--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ plugins {
     id 'application'
 }
 
+if (project.hasProperty('projVersion')) {
+  project.version = project.projVersion
+} else {
+  project.version = '1.0.0'
+}
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
